coole-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coole-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coole-webapp
  template:
    metadata:
      labels:
        app: coole-webapp
    spec:
      containers:
        - name: coole-webapp
          image: 'davidhuebscher/coole-webapp:latest'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/secrets
              name: postgres-secret-volume
              readOnly: true
            - mountPath: /certs
              name: token-certificates-secret-volume
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: postgres-secret-volume
          secret:
            secretName: db-password-secret
        - name: token-certificates-secret-volume
          secret:
            secretName: token-certificates-secret
