coole-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coole-webapp
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app:  coole-webapp
