coole-webapp-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coole-webapp
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`coole-webapp.huebschers.us`)
      priority: 10
      services:
        - name: coole-webapp
          port: 80
